--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     
     <!-- Single, reusable audio player for iOS compatibility -->
-    <audio id="audio-player"></audio>
+    <audio id="audio-player" playsinline></audio>
 
     <!-- Your Custom JavaScript -->
     <script src="assets/js/main.js"></script>
